rajyeturi16-salesforce/project/objects/Salesforce_Documents__c.object
<CustomObject>
    <description>Object for storing the documents</description>
    <fields>
        <fullName>Components_Used__c</fullName>
        <label>Components Used</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <label>Developer</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Spent__c</fullName>
        <label>Hours Spent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_VF_page_URL__c</fullName>
        <label>Live VF page URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <description>Group memebers</description>
        <label>Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to sfdc team</description>
        <label>SFDC_Team</label>
        <referenceTo>SFDC_Team__c</referenceTo>
        <relationshipLabel>Salesforce POC&apos;s</relationshipLabel>
        <relationshipName>Salesforce_POC_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yammer_URL__c</fullName>
        <label>Yammer URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Salesforce POC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Developer__c</columns>
        <columns>Subject__c</columns>
        <columns>Yammer_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>POC{00000}</displayFormat>
        <label>POC #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce POC&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Description_Mand</fullName>
        <active>false</active>
        <errorConditionFormula>IF( LEN(Description__c  ) == 0, true, false)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>